--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,8 @@
 {
     "manifest_version": 3,
     "version": "1.0",
-    "name": "Leads tracker",
+    "name": "URL tracker",
+    "author": "Hamza Ali",
     "action": {
         "default_popup": "index.html",
         "default_icon": "icon.png"
