--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,7 @@
     "version": "1.0",
     "name": "URL tracker",
     "author": "Hamza Ali",
+    "description":"Url Tracker helps user to track and save web url to interact within the Future!",
     "action": {
         "default_popup": "index.html",
         "default_icon": "icon.png"
